# brevia

./: .dockerignore  .env.sample  .flake8  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  main.py  mkdocs.yml  pyproject.toml  pytest.ini
.github/: dependabot.yml
.github/workflows/: cs.yml  docs.yml  publish.yml  release.yml  unit.yml
brevia/: analysis.py  app_metadata.py  async_jobs.py  base_retriever.py  callback.py  chat_history.py  collections.py  commands.py  completions.py  config.py  connection.py  dependencies.py  events.py  generate.py  index.py  language.py  load_file.py  middleware.py  models.py  prompts.py  providers.py  query.py  services.py  settings.py  tokens.py
brevia/alembic/: __init__.py  env.py
brevia/alembic/versions/: 1d927e0cbc61_locked_until_column.py  1eab976dea29_initial_schema.py  24b025d48e0a_config_table.py  95d93297832c_migration_to_jsonb_format.py  b34017752e45_chat_history_evaluation.py  be67c72a4e5a_async_jobs_table.py  eb659f4dd1c9_utc_timestamp.py
brevia/postman/: Brevia API.postman_collection.json  Brevia API.postman_environment.json
brevia/prompts/analysis/yaml/: default.classification.yaml  default.summarize.yaml  default.summarize_point.yaml
brevia/prompts/generation/: questions_generation.yaml  questions_generation_refine.yaml
brevia/prompts/qa/: default.condense.yaml  default.contestualize.yaml  default.human.yaml  default.system.yaml
brevia/prompts/rag/: condense.yml  human.yml  system.yml
brevia/prompts/summarize/yaml/: en.classificate.yaml  en.summarize.yaml  en.summarize_point.yaml  it.classificate.yaml  it.summarize.yaml  it.summarize_point.yaml
brevia/prompts/text_analysis/: questions_initial.yml  questions_refine.yml
brevia/routers/: analyze_router.py  app_routers.py  audio_router.py  chat_history_router.py  collections_router.py  completion_router.py  config_router.py  download_router.py  index_router.py  jobs_router.py  providers_router.py  qa_router.py  status_router.py
brevia/scripts/: csv_import.py  export_collection.py  folder_import.py  html_import.py  import_collection.py  pdf_import.py  test_service.py
brevia/tasks/: base.py  text_analysis.py
brevia/utilities/: collections_io.py  dates.py  files_import.py  json_api.py  openapi.py  output.py  run_service.py  types.py  uuid.py
docs/: analyze_services.md  async_jobs.md  chat_search.md  cmetadata.md  collection_config.md  collections.md  config.md  database.md  document_index.md  endpoints_overview.md  index.md  prompt_management.md  security.md  services_and_tasks.md  setup.md
docs/models/: anthropic.md  cohere.md  deepseek.md  ollama.md  openai.md  other_models.md  overvew.md  overview.md
docs/tutorials/: create_collection.md  create_custom_services.md  create_summarization.md  services.md  summarization.md
tests/: .env.sample  conftest.py  test_analysis.py  test_app_metadata.py  test_async_jobs.py  test_base_retriever.py  test_callback.py  test_chat_history.py  test_collections.py  test_collections_tools.py  test_commands.py  test_completions.py  test_events.py  test_index.py  test_load_file.py  test_middleware.py  test_models.py  test_prompts.py  test_providers.py  test_query.py  test_services.py  test_settings.py  test_tokens.py
tests/files/: run_test_service.yml  test-collection-collection.csv  test-collection-embedding.csv
tests/files/docs/: test.csv
tests/files/prompts/: few_shot.yml  initial_prompt.yml  refine_prompt.yml
tests/routers/: test_analyze_router.py  test_app_routes.py  test_audio_router.py  test_chat_history_router.py  test_collections_router.py  test_completion_router.py  test_config_router.py  test_download_router.py  test_index_router.py  test_jobs_router.py  test_providers_router.py  test_qa_router.py  test_status_router.py  test_status_token_router.py
tests/tasks/: test_text_analysys.py
tests/utilities/: test_collections_io.py  test_files_import.py  test_openapi.py  test_output.py  test_run_service.py  test_types.py
